# test-bmad

./: .env.example  .gitignore  .release-please-manifest.json  CONTRIBUTING.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  .gitignore  CHANGELOG.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/adapters/: google_cloud_translate_provider.py  google_cloud_vision_ocr_provider.py  ocr_provider.py  pinyin_provider.py  pypinyin_provider.py  textract_ocr_provider.py  translation_provider.py
backend/app/api/v1/: health.py  metrics.py  process.py  process_text.py  router.py
backend/app/core/: metrics.py  sentry.py
backend/app/middleware/: request_id.py
backend/app/schemas/: diagnostics.py  health.py  process.py
backend/app/services/: budget_service.py  diagnostics_service.py  image_validation.py  ocr_service.py  pinyin_service.py  process_text_service.py  reading_service.py  translation_service.py
backend/tests/: helpers.py  test_story1_smoke.py
backend/tests/contract/response_envelopes/: test_process_envelopes.py
backend/tests/integration/api_meta/: test_openapi_route.py
backend/tests/integration/api_v1/: test_health_route.py  test_metrics_route.py  test_process_route.py  test_process_text_route.py
backend/tests/unit/: test_main.py
backend/tests/unit/adapters/: test_gcv_ocr_provider.py  test_google_cloud_translate_provider.py  test_pypinyin_provider.py  test_textract_ocr_provider.py  test_translation_provider.py
backend/tests/unit/core/: test_metrics.py  test_sentry.py
backend/tests/unit/middleware/: test_request_id_middleware.py
(+98 files in other folders)
