[project]
name = "test-bmad-backend"
version = "0.1.0"
description = "FastAPI backend for test-bmad."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.129.0",
  "pillow==11.2.1",
  "pydantic==2.11.9",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.37.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.2",
  "ruff==0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
