[project]
name = "test-bmad-backend"
version = "0.2.0"
description = "FastAPI backend for test-bmad."
requires-python = ">=3.12"
dependencies = [
  "google-cloud-translate>=3.0,<4.0",
  "google-cloud-vision>=3.7,<4.0",
  "fastapi==0.129.0",
  "pillow==12.1.1",
  "pydantic==2.11.9",
  "pypinyin==0.55.0",
  "sentry-sdk[fastapi]>=2.0,<3.0",
  "python-multipart==0.0.22",
  "uvicorn[standard]==0.37.0",
]

[dependency-groups]
dev = [
  "boto3==1.37.26",
  "httpx==0.28.1",
  "pytest==8.4.2",
  "ruff==0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
